--- a/dev/sites/Uganda-community-health-worker-registry/pages/.htaccess
+++ b/dev/sites/Uganda-community-health-worker-registry/pages/.htaccess
@@ -1,17 +1,29 @@
-# Configure RewriteBase to be the path in your web root for this directory
-# and rename this file to .htaccess
-# Make sure your apache config allows overwrite these options
-<IfModule mod_rewrite.c>
-    RewriteEngine On
-    RewriteBase  /chwr
-    DirectoryIndex index.php
-    ErrorDocument 403 index.php/home
-    ErrorDocument 404 index.php/home   
-    RewriteRule (^/?$) home [L] 
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule (.*) index.php/$1 [L]
-    SetEnv I2CE_Rewritten On
-</IfModule>
-#turn off magic quotes -- deprecated in php 5.3
-#php_flag magic_quotes_gpc off
+Options -MultiViews
+RewriteEngine On
+
+Options -Indexes
+
+RewriteBase /
+
+#Remove extra trailing slashes
+RewriteCond %{REQUEST_URI} ^(.*)/{2,}(.*)$
+RewriteRule . %1/%2 [R=301,L]
+
+#Add missing trailing slash
+RewriteCond %{REQUEST_URI} /+[^\.]+$
+RewriteRule ^(.+[^/])$ %{REQUEST_URI}/ [R=301,L]
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule . index.php [L]
+
+<ifModule mod_deflate.c>
+	<filesmatch "\.(js|css|html|jpg|png|gif|eot|woff|ttf|svg)$">
+		SetOutputFilter DEFLATE
+	</filesmatch>
+</ifModule>
+
+<FilesMatch "\.(htaccess|htpasswd|ini|log|sh|inc|bak|cache|tpl)$">
+	Order Allow,Deny
+	Deny from all
+</FilesMatch>
