--- a/dev/sites/Uganda-community-health-worker-registry/pages/.htaccess
+++ b/dev/sites/Uganda-community-health-worker-registry/pages/.htaccess
@@ -3,7 +3,7 @@ RewriteEngine On
 
 Options -Indexes
 
-RewriteBase /
+RewriteBase /community_registry
 
 #Remove extra trailing slashes
 RewriteCond %{REQUEST_URI} ^(.*)/{2,}(.*)$
